# os3

./: .gitattributes  .gitignore  .gitlab-ci.yml  2_.webm  README.md
assets/: 1_.webm  3.webm  4.webm  6.webm
build_scripts/: start-browser-sync.sh  wasm-once.sh  wasm-watch.sh  watch-debug.sh  watch.sh
external-sources/: .gitattributes  .gitignore  setup-ocr.sh  setup-rpg.sh  setup-tts.sh  setup.sh  sources  sources.txt
external-sources/bevy_mod_audio/: Cargo.toml
external-sources/bevy_mod_audio/examples/: loopback.rs
external-sources/bevy_mod_audio/src/: audio_output.rs  lib.rs  microphone.rs  spatial_audio.rs
external-sources/bevy_web_video/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
external-sources/bevy_web_video/.github/workflows/: pages.yml
external-sources/bevy_web_video/examples/captions/: Cargo.toml  index.html
external-sources/bevy_web_video/examples/captions/src/: lib.rs
external-sources/bevy_web_video/examples/cubes/: Cargo.toml  index.html
external-sources/bevy_web_video/examples/cubes/src/: lib.rs
external-sources/bevy_web_video/examples/simple/: Cargo.toml  index.html
external-sources/bevy_web_video/examples/simple/src/: lib.rs
external-sources/bevy_web_video/examples/skyvid/: Cargo.toml  index.html
external-sources/bevy_web_video/examples/skyvid/src/: bluesky.rs  lib.rs
external-sources/bevy_web_video/examples/web/: index.html
external-sources/bevy_web_video/src/: event.rs  lib.rs  registry.rs  render.rs
external-sources/bevy_web_video/src/registry/: asset.rs
external-sources/cross-file/: emscripten-inih.txt
external-sources/inih-r62/examples/: config.def
external-sources/leptonica-1.86.0/: Makefile.in  aclocal.m4  configure
external-sources/leptonica-1.86.0/autom4te.cache/: output.0  output.1  (+5 more)
external-sources/open_jtalk_custom_lib/: open_jtalk_custom_lib.c
external-sources/patches/: hts_engine_wasm.patch  lcf_wasm.patch  ucd_tools_wasm.patch
external-sources/pc-wasm/: icu-i18n.pc
licenses/: GenEiAntique-OFL.txt  bevy_mod_audio.txt
ocr/: .gitignore  batch.sh  export_pdf.sh  export_png.sh  requirements.txt  script.py  setup.sh
ocr/templates/: gushagusha.jinja2  main.jinja2
ocr_web/: about.html  exif-reader.js  harfbuzz  harfbuzz.js  harfbuzz.wasm  index.html  license.html  main.js  myworker_harfbuzz.js  myworker_tesseract.js  tesseract.js  tesseract.wasm
os3-ws-server/: Cargo.toml  run.sh  rust-toolchain  test.html
os3-ws-server/src/: main.rs
os3bevy/: Cargo.toml  README.md  rust-toolchain  untitled  watch.sh
os3bevy/.cargo/: config.toml
os3bevy/assets/movies/: 5.webm  concat_main.txt  concat_text.txt  text_1.webm
os3bevy/assets/shaders/: custom_material_2d.wgsl  drawing_2d.wgsl  video_material_2d.wgsl  voicesphere.wgsl
os3bevy/src/: lib.rs
os3bevy/src/bevy_connect/: video.rs
os3bevy/wasm/: index_template.html
os3bevy/wasm/rireki/: dependencies.html  index.html
os3bevy/wasm/svgasobi/: index.html
os3core/: Cargo.toml  build.rs
os3core/src/: lib.rs  typed.rs
os3rust/: .gitattributes  .gitignore  Cargo.toml  build.rs  emsc-watch-debug.sh  emsc-watch.sh  index.html  rust-toolchain  shell-common.sh  wasm-watch-debug.sh  wasm-watch.sh  watch-debug.sh  watch.sh
os3rust/.cargo/: config.toml
os3rust/assets/movies/: concat_main.webm  concat_text.webm  text_2.webm
os3rust/assets/shaders/: custom_material_2d.wgsl  drawing_2d.wgsl  video_material_2d.wgsl  voicesphere.wgsl
os3rust/src/: bevy_connect.rs  lib.rs  typed.rs  untyped.rs
os3rust/src/bevy_connect/: transform.rs  video.rs  window.rs
os3rust/src/math/: wave.rs
os3rust/wasm/: guruguru.js  index.html  svgasobi.js
os3rust/wasm/yewasobi/: index.html  yewasobi.d.ts  yewasobi.js  yewasobi_bg.js  yewasobi_bg.wasm.d.ts
os3svg/: Cargo.toml
os3yew/: .gitignore  Cargo.toml  auto-fetch.py  install-wasm-binaries.sh  requirement.txt  update-metrics.sh  watch-joplin.sh
os3yew/assets/: note_id.json  title.webm  titles.json
os3yew/assets/doomscroll/: inquire.json
os3yew/assets/doomscroll/inquire/: KONOYOWAJIGOKU.webm  rec20260720-crop.webm
os3yew/assets/texts/: text_combined.txt  「国務大臣思念制」導入へ.txt  「大大補償大会」開催決定.txt  「桜分裂」の呪い.txt  「風」を国旗損壊罪で起訴.txt  ソフトパワー情報保護法が成立.txt  ハイソ法.txt  大根おろし.txt  性器返却台1.txt  時違いでも場違いでも.txt  武器バーゲンセール1.txt  武器バーゲンセール2.txt  注意.txt  藝術戦闘班1.txt  見出し及び文章末尾の問題.txt  通告.txt
os3yew/metadata/: images.json  titles.json
os3yew/metadata/doomscroll/: inquire.json  komagire.json
os3yew/src/: components.rs  domlib.js  lib.rs  util.rs
os3yew/templates/: text_combined.txt
os3yew/wasm/doomscroll/: index.html  style.css
os3yew/wasm/shimbun/: dependencies.html  electron-main.js  espeak-ng-slim.js  index.html  openjtalk-slim.js  package-electron.json  package.json  select.html  shimbun.js  voice-worker-en.js  voice-worker-ja.js
packaging/shimbun/: .gitignore  do_all.sh  electron-main.js  forge.config.js  logo.icns  package.json  prepare.sh
python/: mp.py  requirements.txt  server.py  start_voice_server  voice.py  voice_server.py
python-tts/: requirements.txt  setup.sh  start_piper  start_tts_server  tts_server.py
python-tts/setup-darwin/: 01-root.sh  02-user.sh  setup.sh
rpg-helper/: .gitattributes  .gitignore  dev-watch.sh  index.html  lcf_lib.js  lcf_worker.js  rpg_lsd_io.cpp  rpg_lsd_io.hpp  rpg_lsd_io_main.cpp  rpg_lsd_io_test.cpp  save_check.js  server.py  setup-rpg.sh  test1.lsd
rpg-helper/gencache/: gencache_asahi
tenji/: loginscript.sh  tenji_doomscroll.py  tenji_doomscroll_infloop  tenji_movie.py  tenji_movie_infloop  tenji_movie_infloop.py  tenji_rireki.py  tenji_rireki_infloop  tenji_rireki_infloop.py  tenji_rpg.py  tenji_rpg_infloop  tenji_shimbun.py  tenji_shimbun_infloop
tenji/electron/: main.js  package.json
tenji/electron-os2026/: do_print.py  main.js  package.json  preload.js  requirements.txt
tenji/rpg-remap/: config.ini
tenji/setup-darwin/: 01-root.sh  02-user.sh  com.torahappy.shimbunstartup.plist  tenji_shimbun_infloop
util-scripts/: .gitignore  aone-gen.bash  gen-cells.bash  gen-test-input-data.bash  grid-placement-batch.py  grid-placement-svg.py  metrics.py
(+26 files in other folders)
