[package]
name = "os3-ws-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = {version = "0.6.11", features = ["fs"]}
uuid = { version = "1.23.2", features = ["v4"] }
