cargo-features = ["codegen-backend"]

[package]
name = "os3bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_mod_audio = { path = "../external-sources/bevy_mod_audio" }
bevy = { version = "0.17.3", features = ["dynamic_linking", "webp", "jpeg"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy_tweening = "0.14.0"
cpal = "0.17.1"
rand = "0.9.2"
serde_json = "1.0.149"
futures-lite = "2.6.1"
rustfft = "6.4.1"
num-complex = "0.4.6"
num-traits = "0.2.19"
find_peaks = "0.1.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ffmpeg-next = "8.0.0"

[profile.dev]
opt-level = 1
codegen-backend = "cranelift" # WARN: might be unstable

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[[bin]]
name = "rireki"
path = "src/bin/rireki/main.rs"