[package]
name = "os3rust"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
quanta = "0.12.6"
resvg = "0.45.1"
rust-embed = "8.9.0"
rustybuzz = "0.20.1"

[dependencies.sdl2]
version = "0.38"
default-features = false
features = ["mixer"]

[[bin]]
name = "guruguru"
path = "src/bin/guruguru/main.rs"

[[bin]]
name = "rireki"
path = "src/bin/rireki/main.rs"


