[package]
name = "os3rust"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
resvg = "0.45.1"
rust-embed = "8.9.0"
rustybuzz = "0.20.1"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "emscripten")))'.dependencies]
quanta = "0.12.6"

[dependencies.sdl2]
version = "0.38"
default-features = false
features = ["mixer", "ttf", "image", "gfx"]

[profile.release]
codegen-units = 1
lto = "thin"

[[bin]]
name = "svgasobi"
path = "src/bin/svgasobi/main.rs"

[[bin]]
name = "rireki"
path = "src/bin/rireki/main.rs"

[[bin]]
name = "giji"
path = "src/bin/guruguru/main.rs"

[[bin]]
name = "mojiate"
path = "src/bin/guruguru/main.rs"

[[bin]]
name = "shimbun"
path = "src/bin/guruguru/main.rs"
