cargo-features = ["codegen-backend"]

[package]
name = "os3rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_mod_audio = { path = "../external-sources/bevy_mod_audio" }
askama = "0.14.0"
bevy = { version = "0.17.3", features = ["dynamic_linking", "webp", "jpeg"] }
resvg = "0.45.1"
rust-embed = "8.9.0"
rustybuzz = "0.20.1"
yew = { version = "0.22.0", features = ["csr"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
quanta = "0.12.6"
bevy_tweening = "0.14.0"
arima = "0.3.0"
cpal = "0.17.1"
rand = "0.9.2"
serde_json = "1.0.149"
reqwest = { version = "0.12", features = ["json", "blocking"] }
futures-lite = "2.6.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ffmpeg-next = "8.0.0"

[profile.dev]
opt-level = 1
codegen-backend = "cranelift" # WARN: might be unstable

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[[bin]]
name = "svgasobi"
path = "src/bin/svgasobi/main.rs"

[[bin]]
name = "rireki"
path = "src/bin/rireki/main.rs"

[[bin]]
name = "giji"
path = "src/bin/guruguru/main.rs"

[[bin]]
name = "mojiate"
path = "src/bin/guruguru/main.rs"

[[bin]]
name = "shimbun"
path = "src/bin/guruguru/main.rs"
