[package]
name = "os3svg"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
chrono = "0.4.43"
comrak = "0.50.0"
getrandom = {version = "0.4.1", features = ["wasm_js"]}
log = "0.4.29"
rand = "0.10.0"
rust-embed = "8.11.0"
serde_json = "1.0.149"
wasm-logger = "0.2.0"
yew = { version = "0.22.0", features = ["csr"] }
