[package]
name = "os3svg"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
chrono = "0.4.43"
comrak = "0.50.0"
getrandom = {version = "0.4.1", features = ["wasm_js"]}
log = "0.4.29"
rand = "0.10.0"
regex = "1.12.3"
rust-embed = "8.11.0"
rustybuzz = "0.20.1"
serde_json = "1.0.149"
wasm-logger = "0.2.0"
web-sys = { version = "=0.3.85", features = ["Window"] }
yew = { version = "0.22.0", features = ["csr"] }
