[package]
name = "os3yew"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = {version = "0.8.12", default-features = false}
askama = "0.15.4"
chrono = "0.4.43"
comrak = "0.50.0"
getrandom = {version = "0.4.1", features = ["wasm_js"]}
gloo-timers = "0.3.0"
log = "0.4.29"
ordered-float = "5.1.0"
rand = "0.10.0"
regex = "1.12.3"
rust-embed = "8.11.0"
serde_json = "1.0.149"
wasm-bindgen-futures = "=0.4.58"
wasm-logger = "0.2.0"
web-sys = { version = "=0.3.85", features = ["Window", "Document", "DomRect", "console", "UrlSearchParams", "Location"] }
yew = { version = "0.22.0", features = ["csr"] }
