[workspace]
members = [ "examples/captions", "examples/cubes", "examples/simple", "examples/skyvid"]

[workspace.package]
version = "0.7.0"
edition = "2024"

[workspace.dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_log",
] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "Document",
    "EventTarget",
    "Window",
    "HtmlVideoElement",
    "HtmlMediaElement",
] }
crossbeam-channel = "0.5.15"

[package]
name = "bevy_web_video"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
webgpu = ["bevy/webgpu"]

[dependencies]
bevy = { workspace = true }
crossbeam-channel = { workspace = true }
gloo-events = "0.2.0"
js-sys = "0.3.77"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.50"
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { workspace = true }
# Keep in sync with bevy
# https://github.com/bevyengine/bevy/issues/11079
wgpu-types = "26.0.0"

[profile.release]
opt-level = "s"
