[package]
name = "captions"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy_web_video = { path = "../.." }
bevy = { workspace = true, features = ["webgl2"], default-features = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "HtmlTrackElement",
    "TextTrack",
    "TextTrackList",
    "TextTrackCueList",
    "VttCue",
] }
console_error_panic_hook = "0.1.7"
